--- a/package.json
+++ b/package.json
@@ -16,11 +16,15 @@
   "license": "ISC",
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/chai-dom": "0.0.10",
+    "@types/jsdom": "^16.2.6",
     "@types/mocha": "^8.2.0",
     "@types/sinon": "^9.0.10",
     "@types/sinon-chai": "^3.2.5",
     "chai": "^4.3.0",
+    "chai-dom": "^1.8.2",
     "clean-webpack-plugin": "^3.0.0",
+    "jsdom": "^16.4.0",
     "mocha": "^8.2.1",
     "sinon": "^9.2.4",
     "sinon-chai": "^3.5.0",
