--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/chai": "^4.2.14",
     "@types/chai-dom": "0.0.10",
+    "@types/dirty-chai": "^2.0.2",
     "@types/jsdom": "^16.2.6",
     "@types/mocha": "^8.2.0",
     "@types/sinon": "^9.0.10",
@@ -24,6 +25,7 @@
     "chai": "^4.3.0",
     "chai-dom": "^1.8.2",
     "clean-webpack-plugin": "^3.0.0",
+    "dirty-chai": "^2.0.1",
     "jsdom": "^16.4.0",
     "mocha": "^8.2.1",
     "sinon": "^9.2.4",
