--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/mocha": "^8.2.0",
     "@types/sinon": "^9.0.10",
     "@types/sinon-chai": "^3.2.5",
+    "buffer": "^6.0.3",
     "chai": "^4.3.0",
     "chai-dom": "^1.8.2",
     "clean-webpack-plugin": "^3.0.0",
